# us-tax-legal-rag

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  SUBMISSION.md  docker-compose.yml  documents_manifest.csv  evaluation_report.md  golden_set.csv  processed_manifest.csv  pyproject.toml  requirements-ragas.txt  requirements.lock.txt  requirements.txt  sources.md
.claude/: settings.local.json
docs/: architecture-seq.mmd  architecture.mmd  plan.md  prd.md  project_summary.md  quality_eval_report.txt  task.md
eval/: build_golden_set.py  candidates.json  correctness_verdicts.json  correctness_verdicts_hf.json  eval_dataset.jsonl  eval_dataset_hf.jsonl  judge_correctness.py  ragas_correctness_recall.csv  ragas_score.py  ragas_scores.csv  rescore_correctness.py  run_eval.py  sample_candidates.py
frontend/: app.js  index.html  style.css
processed/: a_a_r_p_et_al_v_trump_president_of_the.json  a_j_t_by_and_through_her_parents_a_t_et_al_v_osseo_area_schools_indepe.json  advocate_christ_medical_center_et_al_v_kennedy_secretary_of_health_and.json  america.json  american_relief_act_2025.json  ames_v_ohio_dept_of_youth_services.json  an_overview_of_small_business_contracting_everycrsreportcom.json  archived_work_requirements_existing_policies_in_medicaid_snap_housing.json  availability_of_federal_data_policy_considerations_for_disclosure_pres.json  bipartisan_safer_communities_act.json  blom_bank_sal_v_honickman_et_al.json  bolstering_ecosystems_against_coastal_harm_act.json  catholic_charities_bureau_inc_et_al_v_wisconsin_labor_and_industry_rev.json  (+87 more)
(+52 files in other folders)
