[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "legalrag"
version = "1.0.0"
description = "AI-Powered US Tax & Legal Research System — hybrid RAG over US Acts, court judgments, legal commentary, and IRS tax publications."
requires-python = ">=3.10"
readme = "README.md"
# Runtime dependencies are managed by requirements.txt (installed separately)
# to avoid duplicating the phase-grouped pin list. This file only declares the
# importable `legalrag` package (src layout) for `pip install -e .`.

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
